align services and products to center

--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ li.dropdown {
 	height:50px;
 	background-color:#09014c;
 	font-size:22px;
-	text-align:right;
+	text-align:center;
 	line-height:50px;
 	color:#FFF;
 	}	
