--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ li a, .dropbtn {
 }
 
 li a:hover, .dropdown:hover .dropbtn {
-    background-color: white;
+    background-color: #0000ff;
 }
 
 li.dropdown {
