minor fixes to body backround and <hr>

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 body {
 	margin:0 0 0 0;
 	padding:0 0 0 0;
-	background:url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShnTTzy591GHWaDqp5dZlAR2fvUYHkuqTEJbuk7tAT20-CpjxM")
+	background:url("http://www.powerpointhintergrund.com/uploads/2017/09/white-canvas-fabric-texture-background-5.jpeg")
 	
 	}
 .navlogo{
