--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@
 body {
 	margin:0 0 0 0;
 	padding:0 0 0 0;
-	background:url("http://www.powerpointhintergrund.com/uploads/2017/09/white-canvas-fabric-texture-background-5.jpeg")
-	
+	background:url("https://www.xmple.com/wallpaper/gradient-white-grey-linear-1920x1080-c2-ffffff-d3d3d3-a-0-f-14.svg");
+	width:100%;
+	height:100%;
 	}
 .navabout{
 position:absolute;
@@ -16,7 +17,7 @@ width:250px;
 	
 .navlogo{
 position:absolute;
-margin-left:-506px;
+margin-left:-450px;
 height:77px;
 width:250px;
 }
