--- a/style.css
+++ b/style.css
@@ -8,6 +8,26 @@ body {
 	width:100%;
 	height:100%;
 	}
+.servicecontent{
+	text-align:center;
+
+
+}
+.navservices{
+	    position: absolute;
+    margin-left: -404px;
+    height: 77px;
+    width: 250px;
+}
+.gearpadding{
+	padding-top:25px;
+	padding-bottom:15px;
+}
+}
+#sercivelist{
+width:640px;
+	text-align:center;
+}
 .navabout{
 position:absolute;
 margin-left:-449px;
@@ -225,4 +245,5 @@ li.dropdown {
 
 .navcolor{
 	color:#006bc6;
+}
 
