--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 body {
 	margin:0 0 0 0;
 	padding:0 0 0 0;
-	background:url("https://www.xmple.com/wallpaper/gradient-white-grey-linear-1920x1080-c2-ffffff-d3d3d3-a-0-f-14.svg");
+	background:url("http://www.myfreetextures.com/wp-content/uploads/2011/06/brushedsteel5.jpg");
 	width:100%;
 	height:100%;
 	}
@@ -17,10 +17,10 @@ body {
 	    position: absolute;
     margin-left: -404px;
     height: 77px;
-    width: 250px;
+    width: 215px;
 }
 .gearpadding{
-	padding-top:25px;
+	padding-top:10px;
 	padding-bottom:15px;
 }
 }
@@ -60,6 +60,9 @@ width:250px;
 	float:left;
 	margin:20px 0 0 0;
 	}
+.fontcolor{
+	color:#09014c;
+}
 	
 .menu {
 	width:100%;
