fixed about page and added image

--- a/style.css
+++ b/style.css
@@ -10,7 +10,14 @@ body {
 	}
 .servicecontent{
 	text-align:center;
+s
 
+}
+.aboutpic{
+	width:1050px;
+	height:225px;
+	float:left;
+	margin-left:224px;
 
 }
 
