basic tooling page without content needed

--- a/assets/style.css
+++ b/assets/style.css
@@ -207,4 +207,8 @@ li.dropdown {
 	text-decoration:none;
 	color:#09014c;
 	}			
-
+#tool{
+	border: 2px solid black;
+	height:50px;
+	width:100px;
+}
