--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
 	height:225px;
 	float:left;
 	margin-left:224px;
+	
 
 }
 #gaf{
@@ -60,7 +61,7 @@ width:640px;
 }
 .navabout{
 position:absolute;
-margin-left:-449px;
+margin-left:-405px;
 height:77px;
 width:250px;
 }
@@ -152,7 +153,7 @@ li a, .dropbtn {
     display: inline-block;
     color: #4ff3fc;
     text-align: center;
-    padding: 25px 30px;
+    padding: 23px 23px;
     text-decoration: none;
 }
 
@@ -288,4 +289,7 @@ li.dropdown {
 }
 #tool{
 
+}
+#pim{
+color:#09014c;
 }
