--- a/style.css
+++ b/style.css
@@ -262,7 +262,7 @@ li.dropdown {
 	width:1050px;
 	background-color:#09014c;
 	float:left;
-	margin:0 0 0 0;
+	margin:0 0 0 -2px;
 	}
 .last {
 	width:300px;
@@ -305,7 +305,7 @@ color:#09014c;
 	
 	}
 .list{
-	margin: 15px 0 0 -135px;
+	margin: 15px 0 0 40px;
 	padding-top:15px;
 	font-size:20px;
 	color:#222c52;
@@ -327,4 +327,17 @@ color:#09014c;
 }
 #wolfbag{
 float:right;
+}
+.treemid{
+	margin-left:275px;
+}
+.bootharness{
+	width:1050px;
+	background-color:#09014c;
+	float:left;
+	margin:0 0 0 -144px;
+}
+#picharness{
+	height:325px;
+	width:300px;
 }
