--- a/style.css
+++ b/style.css
@@ -327,6 +327,10 @@ color:#09014c;
 }
 #wolfbag{
 float:right;
+margin-right:610px;
+padding-bottom:35px;
+
+
 }
 .treemid{
 	margin-left:275px;
@@ -335,9 +339,13 @@ float:right;
 	width:1050px;
 	background-color:#09014c;
 	float:left;
-	margin:0 0 0 -144px;
+	margin:0 0 0 135px;
+
 }
 #picharness{
 	height:325px;
 	width:300px;
+	float-left:25px;
+	margin-left:500px;
+	padding-top:20px;
 }
