--- a/style.css
+++ b/style.css
@@ -72,9 +72,10 @@ height:77px;
 width:250px;
 }
 	
+
 .navlogo{
 position:absolute;
-margin-left:-505px;
+margin-left:-440px;
 height:77px;
 width:250px;
 }
@@ -162,7 +163,7 @@ li a, .dropbtn {
     display: inline-block;
     color: #4ff3fc;
     text-align: center;
-    padding: 20px 24px;
+    padding: 22px 23px;
     text-decoration: none;
 }
 
@@ -303,6 +304,7 @@ padding-bottom:15px;
 }
 #pim{
 color:#09014c;
+padding-bottom:15px;
 }
 
 .accessories {
@@ -347,7 +349,7 @@ padding-bottom:35px;
 	width:1050px;
 	background-color:#09014c;
 	float:left;
-	margin:0 0 0 135px;
+	margin:0 0 0 60px;
 
 }
 #picharness{
