--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 body {
 	margin:0 0 0 0;
 	padding:0 0 0 0;
-	background:url("http://www.myfreetextures.com/wp-content/uploads/2011/06/brushedsteel5.jpg");
+	background:url("mainbkr.jpg");
 	width:100%;
 	height:100%;
 	}
@@ -15,7 +15,7 @@ hr{
 	color:#09acc1;
 }
 
-}
+
 
 
 }
@@ -219,13 +219,7 @@ li.dropdown {
 	margin:15px 0 0 0;
 	
 	}
-	.serv{
-		text-align:center;
-		font-size:5px;
-		padding-top:5px;
-		padding-bottom:5px;
-		font-size:18px;
-	}
+	
 	.servicecontact{
 		width:775px;
 	float:left;
